--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,11 @@ h1, h2, h3, p, ul {
     color: var(--light);
 }
 
+.logo-footer {
+    display: block;
+    margin-bottom: 16px;
+}
+
 /* Container */
 
 .container {
@@ -262,19 +267,16 @@ align-items: center;
 .team-card {
     background-color: var(--white);
     text-align: center;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .team-name {
-    padding-top: 32px;
     padding-bottom: 8px;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
     color: var(--dark);  
-}
-
-.team-item p {
-    padding-bottom: 32px;
 }
 
 .team-img {
@@ -368,10 +370,11 @@ button.secondary:active {
     padding-right: 16px;
     background-color: var(--white);
     text-align: left;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .card-name {
-    padding-top: 32px;
     padding-bottom: 8px;
     font-size: 20px;
     font-weight: 500;
@@ -381,7 +384,6 @@ button.secondary:active {
 }
 
 .card-description {
-    padding-bottom: 32px;
     color: var(--text);
 }
 
