--- a/css/styles.css
+++ b/css/styles.css
@@ -362,6 +362,14 @@ button {
     cursor: pointer;
 }
 
+.button:hover, .button:focus {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.button-hero:hover, .button-hero:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .filters-list {
     display: flex;
     justify-content: center;
@@ -416,6 +424,11 @@ button.secondary:active {
     width: 360px;
     margin-right: 24px;
     margin-bottom: 48px;
+}
+
+.works-item:hover {
+    border: 0.5px solid #F4F4FD;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .works-item:nth-child(3n) {
