--- a/css/styles.css
+++ b/css/styles.css
@@ -312,10 +312,15 @@ align-items: center;
     height: 48px;
 }
 
-.team-link {
-    display: block;
+.team-links li {
     width: 40px;
     height: 40px;
+}
+
+.team-link {
+    display: block;
+    width: 100%;
+    height: 100%;
     background-color: var(--primary);
     border-radius: 50%;
     display: flex;
@@ -330,12 +335,17 @@ align-items: center;
     justify-content: space-between;
 }
 
+.customers .list {
+    width: 168px;
+    height: 88px;
+}
+
 .customer-item {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 168px;
-    height: 88px;
+    width: 100%;
+    height: 100%;
     border: 1px solid var(--subtle-text);
     border-radius: 4px;
     fill: var(--customers);
@@ -426,8 +436,8 @@ button.secondary:active {
     margin-bottom: 48px;
 }
 
-.works-item:hover {
-    border: 0.5px solid #F4F4FD;
+.works-item a:hover {
+    display: block;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
@@ -440,6 +450,7 @@ button.secondary:active {
 }
 
 .card-img {
+    width: 100%;
     display: block;
 }
 
